--- a/site/css/main.css
+++ b/site/css/main.css
@@ -11,8 +11,8 @@
   box-sizing: border-box;
 }
 
-h1 {
-  margin-bottom: 15px;
+#box {
+  background-color: gray;
 }
 
 p {
@@ -167,15 +167,9 @@ p {
 <body>
 <h1>Responsive Layout</h1>
 
-<div class="row">
-  <div class="col-lg-3 col-md-6"><p>Item 1</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 2</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 4</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 5</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 6</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 7</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 8</p></div>
+<div id="box">
+  <div id="content">
+  </div>
 </div>
 
 </body>
