--- a/site/css/main.css
+++ b/site/css/main.css
@@ -15,6 +15,10 @@
   background-color: gray;
 }
 
+#content {
+  background-color: gray;
+}
+
 p {
   border: 1px solid black;
   background-color: #A52A2A;
