--- a/site/css/main.css
+++ b/site/css/main.css
@@ -11,11 +11,11 @@
   box-sizing: border-box;
 }
 
-#box {
+box {
   background-color: gray;
 }
 
-#content {
+content {
   background-color: gray;
 }
 
