--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+html {
+  background-color: #00539f;
+}
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
