--- a/site/css/main.css
+++ b/site/css/main.css
@@ -171,10 +171,13 @@ p {
 <body>
 <h1>Responsive Layout</h1>
 
-<div id="box">
-  <div id="content">
-  </div>
-</div>
+  body {
+  width: 600px;
+  margin: 0 auto;
+  background-color: #ff9500;
+  padding: 0 20px 20px 20px;
+  border: 5px solid black;
+}
 
 </body>
 </html>
