--- a/site/css/main.css
+++ b/site/css/main.css
@@ -15,6 +15,8 @@ box {
   background-color: gray;
 }
 
+h1 {background-color: black; color: white;}
+
 content {
   background-color: gray;
 }
@@ -170,14 +172,6 @@ p {
 </head>
 <body>
 <h1>Responsive Layout</h1>
-
-  body {
-  width: 600px;
-  margin: 0 auto;
-  background-color: #ff9500;
-  padding: 0 20px 20px 20px;
-  border: 5px solid black;
-}
 
 </body>
 </html>
