--- a/site/css/main.css
+++ b/site/css/main.css
@@ -22,14 +22,8 @@ content {
 }
 
 p {
-  border: 1px solid black;
-  background-color: #A52A2A;
-  width: 90%;
-  height: 150px;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: Helvetica;
-  color: white;
+ collor: yellow;
+  background-color: black;
 }
 
 /* Simple Responsive Framework. */
