--- a/site/css/main.css
+++ b/site/css/main.css
@@ -6,6 +6,12 @@ body {
   color: #333;
 }
 
+.grid-container {
+  display: grid;
+  place-items: right;
+  text-align: left;
+}
+
 h1 {
   font-size: 26 px
   color: #007bff;
