--- a/site/css/main.css
+++ b/site/css/main.css
@@ -10,6 +10,10 @@ body {
   display: grid;
   place-items: right;
   text-align: left;
+  background-color: gray;
+  padding: 10px;
+  border: 3px solid black;
+  width: 300px;
 }
 
 h1 {
