--- a/site/css/main.css
+++ b/site/css/main.css
@@ -7,7 +7,7 @@ body {
 }
 
 .box {
-  background-color: gray;
+  background-color: lightgray;
   padding: 10px;
   border: 3px solid black;
   width: 300px;
