--- a/site/css/main.css
+++ b/site/css/main.css
@@ -8,7 +8,7 @@ body {
 
 .box {
   background-color: lightgray;
-  padding: 10px;
+  padding: 10px 20px 10px 10px;
   border: 3px solid black;
   width: 300px;
 }
