--- a/site/css/main.css
+++ b/site/css/main.css
@@ -6,12 +6,20 @@ body {
   color: #333;
 }
 
-.box {
+.outer-box {
   background-color: lightgray;
   padding: 10px 15px 10px 10px;
   border: 3px solid black;
   width: 300px;
 }
+
+.inner-box {
+  width: 20px;
+  height: 10px;
+  padding: 3px;
+  border: 3px solid black;
+  text-align: center;
+  box-sizing: border-box;
 
 h1 {
   font-size: 26px;
