--- a/site/css/main.css
+++ b/site/css/main.css
@@ -28,6 +28,13 @@ h1 {
   padding: 20px;
 }
 
+h2 {
+  font-size: 16px;
+  color: black;
+  text-align: center;
+  padding: 20px;
+}
+
 p {
   font-size: 14px;
   color: black;
