--- a/site/css/main.css
+++ b/site/css/main.css
@@ -2,6 +2,11 @@
 
 body {
   font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: right;
+  height: 100vh;
+  margin: 0;
   background-color: #f0f0f0;
   color: #333;
 }
@@ -11,6 +16,9 @@ body {
   padding: 10px 15px 10px 10px;
   border: 3px solid black;
   width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   box-sizing: border-box;
 }
 
