--- a/site/css/main.css
+++ b/site/css/main.css
@@ -4,7 +4,7 @@ body {
   font-family: Arial, sans-serif;
   display: flex;
   justify-content: center;
-  align-items: right;
+  align-items: center;
   height: 100vh;
   margin: 0;
   background-color: #f0f0f0;
