--- a/site/css/main.css
+++ b/site/css/main.css
@@ -23,9 +23,9 @@ body {
 }
 
 .inner-box {
-  width: 20px;
-  height: 10px;
-  padding: 3px;
+  padding: 10px 15px 10px 10px;
+  border: 3px solid black;
+  width: 300px;
   border: 3px solid black;
   text-align: center;
   box-sizing: border-box;
