--- a/site/css/main.css
+++ b/site/css/main.css
@@ -22,14 +22,6 @@ body {
   box-sizing: border-box;
 }
 
-.inner-box {
-  padding: 10px 15px 10px 10px;
-  border: 3px solid black;
-  width: 300px;
-  border: 3px solid black;
-  text-align: center;
-  box-sizing: border-box;
-
 h1 {
   font-size: 26px;
   color: black;
@@ -40,7 +32,7 @@ h1 {
 h2 {
   font-size: 16px;
   color: black;
-  text-align: center;
+  text-align: right;
   padding: 20px;
 }
 
