--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,4 +1,7 @@
 /*styles.css */
+* {
+  box-sizing: border-box;
+}
 
 body {
   font-family: Arial, sans-serif;
@@ -18,7 +21,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  box-sizing: border-box;
 }
 
 h1 {
