--- a/site/css/main.css
+++ b/site/css/main.css
@@ -13,7 +13,7 @@ body {
   color: #333;
 }
 
-.outer-box {
+.box {
   background-color: lightgray;
   padding: 10px 15px 10px 10px;
   border: 3px solid black;
