--- a/site/css/main.css
+++ b/site/css/main.css
@@ -2,12 +2,20 @@
 
 body {
   font-family: Arial, sans-serif;
-  display: flex;
-  justify-content: center; /* Horizontally centers the outer box */
-  align-items: center;     /* Vertically centers the outer box */
-  height: 100vh;           /* Full height of the viewport */
-  margin: 0;               /* Remove default margin */
-  background-color: #e0e0e0; /* Light grey background for contrast */
+ margin: 0;
+  padding: 0;
+}
+
+header {
+  text-align: center; /* Horizontally centers the title */
+  padding: 20px;      /* Adds some space around the title */
+  background-color: #f4f4f4; /* Light background color for the header */
+}
+
+h1 {
+  font-size: 14px;
+  color: black;
+  text-align: center;
 }
 
 .outer-box {
