--- a/site/css/main.css
+++ b/site/css/main.css
@@ -7,8 +7,9 @@ body {
 }
 
 header {
-  text-align: center; /* Horizontally centers the title */
-  padding: 40px;      /* Adds some space around the title */
+  display: flex;
+  justify-content: center; /* Horizontally centers the title */
+  align-items: center;     /* Vertically centers the title */
   background-color: #f4f4f4; /* Light background color for the header */
 }
 
