--- a/site/css/main.css
+++ b/site/css/main.css
@@ -16,7 +16,9 @@ header {
 h1 {
   font-size: 24px;
   color: black;
-  text-align: center;
+  display: flex;
+  justify-content: center; /* Horizontally centers the title */
+  align-items: center;     /* Vertically centers the title */
 }
 
 .outer-box {
