--- a/site/css/main.css
+++ b/site/css/main.css
@@ -45,7 +45,7 @@ body{
   top:0;
   right: 0px;
   background: green; 
-  padding: 6px 60px;
+  padding: 6px 6px;
   border-left: 2px solid #000;
   border-bottom: 2px solid #000;
 }
@@ -59,7 +59,7 @@ body{
 }
 
 #title-three{
-  background-color: #E5D198;
+  background-color: #E5d190;
 }
 
 /* Simple Responsive Framework. */
